Django연습문제 수정

--- a/django2_ex/myapp/templates/show.html
+++ b/django2_ex/myapp/templates/show.html
@@ -8,12 +8,15 @@
 show.html 화면
 
 출력된 내용 {{ gender }}
-
-{% if gender=='man' %}
-	<img src="../static/images/남.jpg"/>
-{% elif gender=='woman' %}
-	<img src="../static/images/여.jpg"/>
-{% endif %}
+<br>
+{% if gender == 'man' %}
+	<img src="/static/images/남.jpg"/>
+{% elif gender == 'woman' %}
+	<img src="/static/images/여.jpg"/>
+{% else %}
 	<p> 다시 입력하세요
+{% endif %}	
+	
+<!-- if, elif, else, endif -->
 </body>
 </html>
