--- a/django6_mariadb/myguest/templates/list.html
+++ b/django6_mariadb/myguest/templates/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 ** 글 내용 **<p/>
-<a href="/guest/insert">자료 추가</a> <!-- /guest/insert와 같음 현재 경로가 /guest 안이니 -->
+<a href="/guest/insert">자료 추가</a> <!-- insert와 같음 현재 경로가 /guest 안이니 가독성을 위해 앞에 경로 추가-->
 <table border="1">
 	<tr>
 		<th>아이디</th><th>제목</th><th>내용</th><th>등록일</th>
